Adjust .services padding in css to prevent overlap when links clicked

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@
 
 body {
     font-family: var(--primary-font);
+    padding-top:57.55px; /*pushes top of the header down under the fixed navbar*/
 }
 
 h1,
@@ -35,8 +36,7 @@ h2 {
 }
 
 .section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    padding-top: 4rem; /*prevent navbar overlap*/
 }
 /*buttons*/
 .custom-button-filled {
@@ -99,6 +99,8 @@ h2 {
     padding:5px 10px;
     font-size: 0.8rem;
 }
+/*reservations*/
+
 /*Footer/contact*/
 #contact {
     background-color: var(--primary-color);
